# SI214C-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  visualization.py
Armadillo/: CMakeLists.txt  solver.cpp
Armadillo/examples/: main.cpp
Armadillo/include/: complex_solver.h
Armadillo/src/: complex_solver.cpp
Visualization/: README  a.txt  field_matrix.txt  main.cpp  segment_visual.py  visualization.py
basics/: CMakeLists.txt  basics_test.cpp  global.h  pos.h  pos.hpp  vec.hpp
elements/: CMakeLists.txt  element_test.cpp  elements.h  nedelecp1.cpp  nedelecp1.h
mesh/: CMakeLists.txt  mesh.cpp  mesh.h  test_mesh.cpp
quadrature/: gaussian.hpp
region/: CMakeLists.txt  cuboid.cpp  cuboid.h  region.h  region_test.cpp
